--- a/cinema/musicshare-client/src/app/movie-list/movie-list.component.html
+++ b/cinema/musicshare-client/src/app/movie-list/movie-list.component.html
@@ -1,1 +1,17 @@
-Hello
+
+<div class="container">
+    <div class="row">
+      <div class="col">
+   
+          <h2 class="col-12">Lists</h2>
+         
+          <ul>
+            <li *ngFor="let movie of movies">
+              {{ movie.director }}
+            </li>
+          </ul>
+         
+      
+      </div>
+    </div>
+  </div>
