--- a/cinema/musicshare-client/src/app/login/login.component.html
+++ b/cinema/musicshare-client/src/app/login/login.component.html
@@ -16,6 +16,10 @@
   </mat-form-field>
 
   <div>
-    <button mat-flat-button type="submit" color="primary" [disabled]="form.invalid">Mentés</button>
+    <button mat-flat-button type="submit" color="primary" [disabled]="form.invalid">Belépés</button>
+  </div>
+
+  <div>
+    <button routerLink="/registration" mat-flat-button  color="primary" >Regisztarcio</button>
   </div>
 </form>
