--- a/cinema/musicshare-client/src/app/registration/registration.component.html
+++ b/cinema/musicshare-client/src/app/registration/registration.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
+  <div class="wrapper">
     <mat-form-field>
         <input matInput placeholder="Felhasználónév" type="username"  formControlName="username" required>
         <mat-error *ngIf="username.invalid">Username is required</mat-error>
@@ -21,5 +22,5 @@
       <div>
         <button mat-flat-button type="submit" color="primary" [disabled]="form.invalid">Mentés</button>
       </div>
-    
+    </div>
 </form>
