movie component teljes

--- a/cinema/musicshare-client/src/app/movie-list/movie-list.component.html
+++ b/cinema/musicshare-client/src/app/movie-list/movie-list.component.html
@@ -27,3 +27,7 @@
       </tr>
   </table>
 </ng-container >
+
+<ng-container *ngIf="isAdmin===false">
+    <app-movie ></app-movie>
+</ng-container>
