--- a/cinema/musicshare-client/src/app/movie-list/movie-list.component.css
+++ b/cinema/musicshare-client/src/app/movie-list/movie-list.component.css
@@ -12,3 +12,42 @@ table, th , td {
 #table2{
   margin : 150px;
 }
+
+.wrapper {
+  padding: 10px;
+  top: 100px;
+  position: absolute;
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  left: 50%;
+  transform: translateX(-50%);
+  background-image: url(bg.jpg);
+}
+
+.line{
+  display: flex;
+}
+.coll {
+  padding-left: 5px;
+  flex: 1 1 33%;
+}
+
+.h2{
+  font-size: 24px;
+  width: 100%;
+  text-align: center;
+}
+
+.h3 {
+  font-size: 18px;
+}
+
+.coll:not(.h3) {
+  padding-left: 20px;
+  border-bottom: 1px dotted black;
+}
+
+.wrapper > button{
+  margin-top: 15px;
+}
