--- a/cinema/musicshare-client/src/app/movie-list/movie-list.component.html
+++ b/cinema/musicshare-client/src/app/movie-list/movie-list.component.html
@@ -28,6 +28,9 @@
         <td>{{ selectedMovie.mainActors }}</td>
         <td>{{ selectedMovie.director }}</td>
       </tr>
+      <div>
+        <button mat-flat-button  color="primary" (click)="deleteMovie()" >Film törlése</button>
+      </div>
   </table>
 </ng-container >
 
