--- a/cinema/musicshare-client/src/app/movie-list/movie-list.component.css
+++ b/cinema/musicshare-client/src/app/movie-list/movie-list.component.css
@@ -51,3 +51,34 @@ table, th , td {
 .wrapper > button{
   margin-top: 15px;
 }
+
+.popup{
+  padding: 10px;
+  position: absolute;
+  top: 100px;
+  background-image: url(bg.jpg);
+  z-index: 4;
+  left: 50%;
+  width: 300px;
+  transform: translateX(-50%);
+  border: 1px solid black;
+  box-shadow: 2px 2px 2px gray;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+img{
+  color: blue;
+}
+
+.popup label:not(.h3) {
+  flex: 1 1 33%;
+}
+.buttWrapper {
+  flex: 1;
+  justify-content: center;
+  text-align: center;
+}
+.buttWrapper button {
+  
+}
