--- a/cinema/musicshare-client/src/app/movie-list/movie/movie.component.html
+++ b/cinema/musicshare-client/src/app/movie-list/movie/movie.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" class="form-group" id ="form"(ngSubmit)="onSubmit()">
-  
+  <div class="wrapper">
     <mat-form-field>
       <input matInput placeholder="Film neve" formControlName="MovieName" required>
       <mat-error *ngIf="MovieName.invalid">A film nevét szükséges megadni.</mat-error>
@@ -18,5 +18,5 @@
       <button mat-flat-button type="submit" color="primary" [disabled]="form.invalid" >Film mentése</button>
     </div>
   
-    
-  </form>
+  </div> 
+</form>
