--- a/cinema/cinema-client/src/app/projection/projection.component.html
+++ b/cinema/cinema-client/src/app/projection/projection.component.html
@@ -9,7 +9,7 @@
           <label class="coll">Film vége</label>
       </div>
       <div class="line" *ngFor="let pro of projections; let i = index" (click)="setSelected(i)" >
-        <label class="coll">{{ pro.movie.name }}</label>
+        <label class="coll2">{{ pro.movie.name }}</label>
         <label class="coll">{{ pro.movie.mainActors }}</label>
         <label class="coll">{{ pro.movie.director }}</label>
         <label class="coll">{{ pro.start  | date: 'EEEE, MMMM d, y, h:mm:ss a'}}</label>
@@ -17,7 +17,25 @@
       </div>
   </div>
 </ng-container>
-
+<br>
+<ng-container >
+  <table mat-table id="table2"  >
+      <tr>
+          <th>Film neve</th>
+          <th>Főszereplő</th>
+          <th>Rendező</th>
+          <th>Film kezdete</th>
+          <th>Film vége</th>
+        </tr>
+      <tr *ngFor="let pro of projections; let i = index" (click)="setSelected(i)">
+          <td>{{ pro.movie.name }}</td>
+        <td>{{ pro.movie.mainActors }}</td>
+        <td>{{ pro.movie.director }}</td>
+        <td>{{ pro.start  | date: 'EEEE, MMMM d, y, h:mm:ss a'}}</td>
+        <td>{{ pro.endt |  date: 'EEEE, MMMM d, y, h:mm:ss a'}}</td>
+      </tr>
+  </table>
+</ng-container >
   
     <ng-container *ngIf="selected === true">
     <table mat-table id="table2"  >
